--- a/src/components/common/aq-log-item.html
+++ b/src/components/common/aq-log-item.html
@@ -8,9 +8,11 @@
 	<style>
 		p {
 			font-family: 'Inconsolata', monospace;
-			font-size:13px;
+			font-size:14px;
 			color: white;
 			margin-bottom: 0px;
+			margin-top:7px;
+			font-weight: 700;
 		}
 
 		.error {
@@ -32,6 +34,11 @@
 			min-width: 12px;
 			padding-right: 5px;
 			--border-bottom: 1px solid #e5e5e5;
+		}
+
+		#message {
+			
+			padding: 0px;
 		}
 	</style>
 
