--- a/src/components/community/aq-community-home-searchbar.html
+++ b/src/components/community/aq-community-home-searchbar.html
@@ -74,13 +74,15 @@
 
         .search-btn {
             border: none;
-            font-size: 13px;
-            background-color: #cc6666;
+            font-size: 12px;
+            background-color: teal;
+            --border: 1px solid teal;
             color: white;
-            padding: 0 20px;
-            border-radius: 2px;
+            padding: 0 10px;
             height: 35px;
+            font-weight: 700;
         }
+
         aq-tag-element {
             margin-top: 5px;
             margin-bottom: 6px;
