--- a/src/components/community/aq-community-previewpost.html
+++ b/src/components/community/aq-community-previewpost.html
@@ -59,8 +59,8 @@
         }
 
         #lower-button-group {
-            margin-top: 10px;
-            margin-bottom: 10px;
+            margin-top: 30px;
+            margin-bottom: 30px;
         }
 
         #bar {
@@ -110,7 +110,7 @@
                 </div>
             </div>
 
-            <div class="footer-button layout horizontal">
+            <div class="footer-button layout horizontal" id='lower-button-group'>
                 <div class="flex"></div>
                 <paper-button raised noink on-tap='onEdit'>Edit</paper-button>
                 <paper-button raised noink on-tap='onSubmit'>Submit</paper-button>
