--- a/src/components/user/aq-user-login-panel.html
+++ b/src/components/user/aq-user-login-panel.html
@@ -30,6 +30,8 @@
             --paper-input-container-label:{
                 font-size: 14px;
             }
+
+            font-family: 'Garamaond', sans-serif;
         }
         paper-card {
             border-radius: 4px;
@@ -91,21 +93,15 @@
 
         #containerr {
             width: 100%;
-            margin: 0 auto;
-            --padding-top: 50px;
-            --margin-top: 50px;
-            background-color: #fff;
             height: 100%;
-            --margin-top: -30px;
+            margin: 0 auto;
+            --background-color: #fff;
             opacity: 1.0;
-
         }
 
         .dialog-fields {
             padding: 1em 2em;
             position: relative;
-
-
         }
 
         .input-fields {
@@ -176,7 +172,6 @@
 
         }
 
-
         gold-email-input {
             --paper-input-container-focus-color: teal;
         }
@@ -208,9 +203,6 @@
             color: teal;
             margin-top: -20px;
         }
-
-
-
     </style>
 
     <template>
@@ -293,7 +285,7 @@
                     <div class="header-container">
                         <!--<h3 class="header-text">{{aRsrc.headerText}}</h3>-->
                         <h3 class="header-text">Aims<span class="header-quant">Quant</span></h3>
-                        <h5 class="sub-header">Invest in your ideas</h5>
+                        <h5 class="sub-header">Invest in your Ideas</h5>
                     </div>
                     <div class="dialog-fields" class="layout vertical">
 
@@ -412,7 +404,7 @@
 
                 </paper-card>
 
-                <div class="flex"></div>
+                <!--div class="flex"></div-->
 
             </div>
         </template>
