--- a/src/components/common/aq-icon-expandable-search.html
+++ b/src/components/common/aq-icon-expandable-search.html
@@ -71,7 +71,7 @@
             </template>
 
          	<template is='dom-if' if='[[!hasIcon]]'>
-            	<paper-button noink class$="[[computeSearchClass(active)]]"  on-tap="onSearch">Search</paper-button>
+            	<paper-button noink raised class$="[[computeSearchClass(active)]]" on-tap="onSearch">Search</paper-button>
             </template>
 
         </div>
@@ -108,7 +108,6 @@
 				} else {
 					this.active = true;
 				}
-
 			},
 
 			computeSearchClass: function(active) {
@@ -117,7 +116,6 @@
 				} else {
 					return "";
 				}
-
 			},
 
 		 	checkForKeys: function (e) {
