--- a/src/components/common/aq-transaction-table.html
+++ b/src/components/common/aq-transaction-table.html
@@ -1,14 +1,25 @@
 <link rel='import' href='../../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
 
+<link rel='import' href='../../../../bower_components/iron-pages/iron-pages.html'>
+
+<link rel='import' href='../../../../bower_components/iron-selector/iron-selector.html'>
+
 <link rel="import" href="../../../../bower_components/vaadin-grid/vaadin-grid.html">
 <link rel="import" href="../../../../bower_components/vaadin-grid/vaadin-grid-sorter.html">
 <link rel="import" href="../../../../bower_components/vaadin-grid/vaadin-grid-filter.html">
+
+<link rel="import" href="./aq-twoway-toggle.html">
 
 <script src="../../../../resources/scripts/DateTime.js"></script>
 
 <dom-module id='aq-transaction-table'>
 	<style>
+		#table-container {
+			height: 100%;
+		}
+
 		vaadin-grid {
+			height: calc(100% - 52px);
 			--vaadin-grid-header-cell: {
 				background-color: #fafafa;
 				font-size: 14px;
@@ -22,46 +33,130 @@
 				background-color: #fafafa;
 			}
 		}
+
+		aq-twoway-toggle {
+			--toggle-width: 220px
+		}
+
+		#toggle-container {
+			margin-bottom: 5px;
+		}
+
+		.header {
+			font-size: 700;
+			color: #cc6666;
+			margin-bottom: 5px;
+		}
+
 	</style>
 
 	<style include="iron-flex iron-flex-alignment iron-positioning">
     </style>
 
 	<template>
-		<vaadin-grid items="[[items]]" multi-sort=true>
-			<vaadin-grid-column width="100px">
-		      <!--template class="header">Date</template-->
-	      		<template class="header">
-		      		<vaadin-grid-sorter path="date">Date</vaadin-grid-sorter>
-	      		</template>
+		<div id='table-container'>
+			<div id="toggle-container" class="layout horizontal">
+	            <div class="flex"></div>
+	            <template is='dom-if' if='[[proposedOrders]]'>
+		            <aq-twoway-toggle 
+		                first-option="Proposed Orders" 
+		                second-option="Transactions"
+		                selected-type="{{typeSelected}}">
+		            </aq-twoway-toggle>
+	            </template>
 
-		      <template>[[item.date]]</template>
-		    </vaadin-grid-column>
+	            <template is='dom-if' if='[[!proposedOrders]]'>
+	            	<div class="header">Transactions</div>
+	            </template>
 
-		    <vaadin-grid-column width="100px">
-		      <!--template class="header">Symbol</template-->
-		      	<template class="header">
-		      		<vaadin-grid-sorter path="symbol">Symbol</vaadin-grid-sorter>
-	      		</template>
-		      <template>[[item.symbol]]</template>
-		    </vaadin-grid-column>
+	            <div class="flex"></div>
+	        </div>
 
-		    <vaadin-grid-column width="100px">
-		      <template class="header">Quantity</template>
-		      <template>[[item.quantity]]</template>
-		    </vaadin-grid-column>
+	        <template is='dom-if' if='[[showProposedOrders(proposedOrders, tyoeSelected)]]'>
+				<vaadin-grid id='ordersTable' multi-sort=true>
+					<vaadin-grid-column width="100px">
+				      <!--template class="header">Date</template-->
+			      		<template class="header">
+				      		<vaadin-grid-sorter path="date">Date</vaadin-grid-sorter>
+			      		</template>
 
-		    <vaadin-grid-column width="100px">
-		      <template class="header">Price</template>
-		      <template>[[item.price]]</template>
-		    </vaadin-grid-column>
+				      <template>[[item.date]]</template>
+				    </vaadin-grid-column>
 
-		    <vaadin-grid-column width="100px">
-		      <template class="header">Order Fee</template>
-		      <template>[[item.fee]]</template>
-		    </vaadin-grid-column>
+				    <vaadin-grid-column width="100px">
+				      <!--template class="header">Symbol</template-->
+				      	<template class="header">
+				      		<vaadin-grid-sorter path="symbol">Symbol</vaadin-grid-sorter>
+			      		</template>
+				      <template>[[item.symbol]]</template>
+				    </vaadin-grid-column>
 
-	   </vaadin-grid>
+				     <vaadin-grid-column width="100px">
+				     	<template class="header">
+				      		<vaadin-grid-sorter path="direction">Direction
+				      		</vaadin-grid-sorter>
+		      			</template>
+				      <template>[[item.direction]]</template>
+				    </vaadin-grid-column>
+
+				    <vaadin-grid-column width="100px">
+				      <template class="header">
+				      		<vaadin-grid-sorter path="quantity">Quantity
+				      		</vaadin-grid-sorter>
+		      			</template>
+				      <template>[[item.quantity]]</template>
+				    </vaadin-grid-column>
+			   </vaadin-grid>
+		   	</template>
+         	
+         	<template is='dom-if' if='[[showTransactionTable(!proposedOrders, typeSelected)]]'>
+	         	<vaadin-grid id='transactionTable' multi-sort=true>
+						<vaadin-grid-column width="100px">
+					      <!--template class="header">Date</template-->
+				      		<template class="header">
+					      		<vaadin-grid-sorter path="date">Date</vaadin-grid-sorter>
+				      		</template>
+
+					      <template>[[item.date]]</template>
+					    </vaadin-grid-column>
+
+					    <vaadin-grid-column width="100px">
+					      <!--template class="header">Symbol</template-->
+					      	<template class="header">
+					      		<vaadin-grid-sorter path="symbol">Symbol</vaadin-grid-sorter>
+				      		</template>
+					      <template>[[item.symbol]]</template>
+					    </vaadin-grid-column>
+
+		      			<vaadin-grid-column width="100px">
+					      	<template class="header">
+					      		<vaadin-grid-sorter path="direction">Direction
+					      		</vaadin-grid-sorter>
+			      			</template>
+					      <template>[[item.direction]]</template>
+					    </vaadin-grid-column>
+
+					    <vaadin-grid-column width="100px">
+					      <template class="header">
+					      		<vaadin-grid-sorter path="quantity">Quantity
+					      		</vaadin-grid-sorter>
+			      			</template>
+					      <template>[[item.quantity]]</template>
+					    </vaadin-grid-column>
+
+					    <vaadin-grid-column width="100px">
+					      <template class="header">Price</template>
+					      <template>[[item.price]]</template>
+					    </vaadin-grid-column>
+
+					    <vaadin-grid-column width="100px">
+					      <template class="header">Order Fee</template>
+					      <template>[[item.fee]]</template>
+					    </vaadin-grid-column>
+			   	</vaadin-grid>
+		   	</template>
+		   
+	   </div>
 		
 	</template>
 
@@ -71,15 +166,59 @@
 
 			properties: {
 				transactions: Array,
+				orders: Array,
+				
+				typeSelected: {
+					type: Number,
+					value: 0,
+				},
+
+				proposedOrders: {
+					type: Boolean,
+					value: false,
+				},
 			},
 
 			attached: function() {
-                var grid = this.$$('vaadin-grid');
+				this.debounce('asas', function(){
+				//console.log("shivaaa");
+				//console.log(this.transactions);
+				this.manageTransactions();
+                
+				if(this.proposedOrders) {
+                	this.manageOrders();
+            	}}, 500);
 
+			},
+
+			manageOrders: function() {
+				var grid = this.$$('#ordersTable');
+     			var items = [];
+
+     			if(this.orders) {
+
+     				items = new Array(this.orders.length);
+	     			var i = 0;
+
+	     			this.orders.forEach(order => {
+	     				items[i++] = {date: date.formatDateForTable(order.datetime), 
+	     							symbol: order.securitysymbol.ticker,
+	     							quantity: order.remainingquantity,
+	     							direction: order.remainingquantity < 0 ?"SELL":"BUY",
+	     							};
+	     			});
+     			}
+
+     			grid.clearCache();
+     			grid.items = items;
+			},
+
+			manageTransactions: function() {
+			 	
+			 	var grid = this.$$('#transactionTable');
      			var items = [];
 
      			if(this.transactions) {
-
      				items = new Array(this.transactions.length);
 	     			var i = 0;
 
@@ -88,13 +227,49 @@
 	     							symbol: transaction.securitysymbol.ticker,
 	     							quantity: transaction.fillquantity,
 	     							price: transaction.fillprice,
-	     							fee: transaction.orderfee};
+	     							fee: transaction.orderfee,
+	     							direction: transaction.fillquantity < 0 ? "SELL":"BUY",};
 	     			});
      			}
 
-     			this.items = items;
-                
-			}
+     			grid.clearCache();
+     		 	grid.items = items;
+			},
+
+			showTransactionTable: function(proposedOrders, typeSelected) {
+				return proposedOrders ? typeSelected == 1 : typeSelected == 0;
+			},
+
+			showProposedOrders: function(proposedOrders, typeSelected) {
+				return proposedOrders && typeSelected == 0;
+			},
+
+			/*manageTransactions: function(page, pageSize) {
+			 	var grid = this.$$('#transactionTable');
+     			var items = [];
+
+     			if(this.transactions) {
+
+     				items = new Array(page*pageSize);
+	     			var i = 0;
+
+	     			this.transactions.forEach(transaction => {
+	     				if(i < page*pageSize) {
+		     				items[i++] = {date: transaction.datetime, 
+		     							symbol: transaction.securitysymbol.ticker,
+		     							quantity: transaction.fillquantity,
+		     							price: transaction.fillprice,
+		     							fee: transaction.orderfee,
+		     							direction: transaction.fillquantity < 0 ? "SELL":"BUY",};
+	     				}
+	     			});
+     			}
+
+     			grid.clearCache();
+     		 	grid.size = page*pageSize;
+     		 	grid.items = items;
+
+			}*/
 
 		});
 	</script>
