--- a/src/components/common/backtest/aq-cumret-linechart.html
+++ b/src/components/common/backtest/aq-cumret-linechart.html
@@ -135,9 +135,9 @@
 					value:{
 				            xDateFormat:'%e-%b %Y',
 				            shared:true,
-				            positioner: function () {
+				            /*positioner: function () {
 					            return { x: 10, y: 60 };
-					        },
+					        },*/
 					        shadow: false,
 				        },
 				},
@@ -148,7 +148,11 @@
 						navigator:{
 							height:30,
 							margin:10,
-							//enabled:false,
+						},
+						rangeSelector:{
+							enabled: true,
+							inputEnabled: false,
+							selected: 5,
 						},
 					},
 				},
@@ -157,23 +161,21 @@
 					type:Object,
 					value: {
 						enabled:true,
-		          		align:"left",
+		          		align:"right",
 		          		verticalAlign:'top',
-		          		y:15,
+		          		//y:15,
 		          		itemStyle: {
 		          			fontSize:13,
 		          			fontWeight:"normal",
 		          		},
 
-		          		labelFormatter: function(){
+	          			labelFormatter: function(){
 		          			var name = this.name;
 						 	var color = this.color;
-					 	 	//var y = (this.point.y) ? this.point.y.toFixed(2) : 0.0;
-					 	 	console.log(this.name +" " +this.color);
 	          				return '<span style="color:'+ color+'">' + name + '</span>';
           					
-	          			}
-		          		
+	          			},
+
 		          	},
 				},
 
@@ -265,8 +267,8 @@
 		                lineWidth: 2
 		            }]);
 
-			    this.set('legend', {
-			          		enabled:false,
+			    /*this.set('legend', {
+			          		enabled:true,
 			          		align:"left",
 			          		verticalAlign:'top',
 			          		margin:0,
@@ -275,24 +277,18 @@
 			          			fontWeight:"normal",
 			          		},
 			          		
-			          		/*labelFormat: '<span style="color:{color}">{name}</span>: <b>{point.y:}</b> ({point.change:.2f}%)<br/>',*/
-
 			          		labelFormatter: function(){
-			          			
 			          			var name = this.name;
 							 	var color = this.color;
 							 	
-							 	var change = (this.point.change) ? this.point.change.toFixed(2) : 0.0;
-
-							 	//change = isNaN(change) ? '' : (': '+change.toString());
-							 	
-
-		          				return '<span style="color:'+ color+'">' + name + ': </span> <b>' + change +'%</b><br/>';
+		          				return '<span style="color:'+ color+'">' + name + '</span>';
+	          					
 		          			},
-			          	});
+
+			          	});*/
 
 			    this.axisReady = true;
-			    //this.$.cumRetLineChartTemplate.render();
+			    this.$.cumRetLineChartTemplate.render();
 				this.$$('#cumRetLineChart').removeSeries(0);
 			},
 
@@ -319,7 +315,7 @@
 			                lineWidth: 2
 			            }]);
 
-				this.set('legend', {
+				/*this.set('legend', {
 			          		enabled:true,
 			          		align:"left",
 			          		verticalAlign:'top',
@@ -330,13 +326,13 @@
 			          			fontWeight:"normal",
 			          		},
 
-			          		labelFormatter: function(){
+			          		/*labelFormatter: function(){
 			          			var name = this.name;
 							 	var color = this.color;
 						 	 	//var y = (this.point.y) ? this.point.y.toFixed(2) : 0.0;
 		          				return '<span style="color:'+ color+'">' + name + '</span>';
 	          					
-		          			},
+		          			},*/
 
 			          		/*labelFormatter: function() {
 
@@ -357,8 +353,8 @@
 		          				} else {
 		          					return '<span style="color:'+ color+'">' + name + ': </span> <b>' + y +'</b><br/>';
 		          				}
-		          			},*/
-			          	});
+		          			},
+			          	});*/
 
   			 	this.axisReady = true;
 			    this.$.cumRetLineChartTemplate.render();
@@ -393,6 +389,7 @@
 							compare:'percent', 
 							tooltip:{
 								valueDecimals: 2,
+								shared: true,
 
 							 	pointFormatter: function(){
 								 	var series = this.series;
@@ -472,7 +469,8 @@
 					}
 				
 		 			if(counter == nLabels - 1) {
-			 			this.$$('#cumRetLineChart')._chart.redraw();
+			 			//this.$$('#cumRetLineChart')._chart.redraw();
+			 			this.redrawChart();
 			 		}
 		 		}
 			},
@@ -484,7 +482,9 @@
 			},
 
 			redrawChart: function() {
-				this.$$('#cumRetLineChart').redraw();
+				//WHY the followig command doesn't work
+				//this.$$('#cumRetLineChart').redraw();
+				this.$$('#cumRetLineChart')._chart.redraw();
 			},
 
 			getSeriesNameToIndexMap: function() {
@@ -497,7 +497,6 @@
 				}
 
 				return map;
-
 			},
 
 		});
