--- a/src/components/community/aq-announcement-card.html
+++ b/src/components/community/aq-announcement-card.html
@@ -29,7 +29,7 @@
                 margin-top: 13px;
                 color:#474747;
             }
-            ::content span{
+            ::content p {
                 font-family: 'Lato' , sans-serif;
                 font-size: 14px;
                 line-height: 20px;
